feat: change default animation duration to 400ms

--- a/src/styles/components/buttons.css
+++ b/src/styles/components/buttons.css
@@ -1,3 +1,3 @@
 .btn {
-    @apply rounded-lg bg-primary p-2 hover:bg-opacity-80 hover:shadow-md;
+    @apply rounded-lg bg-primary p-2 transition-colors hover:bg-opacity-80 hover:shadow-md;
 }
