--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,3 +3,13 @@
 
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: 'HelveticaNeueCyr';
+  src: url('../assets/fonts/helveticaneuecyr_roman.otf');
+}
+
+@font-face {
+  font-family: 'Arial';
+  src: url('../assets/fonts/ArialMdm.ttf');
+}
