--- a/src/templates/itemMain.hbs
+++ b/src/templates/itemMain.hbs
@@ -1,7 +1,7 @@
 <template>
   <div class="w-[23%]">
     <div class="relative">
-      <img class="mb-4" src="../assets/images/Photo1.jpg" alt="Photo1">
+      <img class="mb-4" src="{{image}}" alt="Photo1">
       <a class="absolute top-2 right-2 cursor-pointer">
         <svg class="w-[30px] block m-auto transition-transform scale-100 group-hover:scale-150 group-hover:transition-transform" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z" />
