--- a/src/templates/mainpage.html
+++ b/src/templates/mainpage.html
@@ -25,7 +25,7 @@
       Dresses
     </h2>
   </section>
-  <section class="max-w-[1200px] h-[65px] mx-auto my-0 box-border flex justify-between mb-4 font-Arial text-[16px]">
+  <section class="max-w-[1200px] h-[65px] mx-auto my-0 box-border flex justify-between items-center mb-4 font-Arial text-[16px]">
     <div class="flex">
       <div class="mr-6">
         <div class="flex justify-between cursor-pointer">
@@ -68,14 +68,14 @@
           <a class="cursor-pointer">XL</a>
         </div>
       </div>
-      <div>
+      <div class="mr-4">
         <div class="flex justify-between cursor-pointer">
           <p>Length</p>
           <span>
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5" />
               </svg>
-            </span>
+          </span>
         </div>
         <div>
           <a class="cursor-pointer">Mini</a>
@@ -83,6 +83,58 @@
           <a class="cursor-pointer">Maxi</a>
         </div>
       </div>
+      <div class="flex justify-between w-[120px] relative">
+        <p>Types</p>
+        <span>
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5" />
+            </svg>
+        </span>
+        <div class="absolute w-[120px] border-2 border-black bg-white top-[25px] left-[0px] rounded-xl">
+          <fieldset>
+            <div class="flex justify-between w-[100px] mx-auto">
+              <label for="saleCheck">Sale</label>
+              <input type="checkbox" name=type id="saleCheck">
+            </div>
+            <div class="flex justify-between w-[100px] mx-auto">
+              <label for="newCheck">New</label>
+              <input type="checkbox" name="type" id="newCheck">
+            </div>
+            <div class="flex justify-between w-[100px] mx-auto">
+              <label for="clothesCheck">Clothes</label>
+              <input type="checkbox" name="type" id="clothesCheck">
+            </div>
+            <div class="flex justify-between w-[100px] mx-auto">
+              <label for="shoesCheck">Shoes</label>
+              <input type="checkbox" name="type" id="shoesCheck">
+            </div>
+            <div class="flex justify-between w-[100px] mx-auto">
+              <label for="presentsCheck">Presents</label>
+              <input type="checkbox" name="type" id="presentsCheck">
+            </div>
+            <div class="flex justify-between w-[100px] mx-auto">
+              <label for="accessorsCheck">Accessors</label>
+              <input type="checkbox" name="type" id="accessorsCheck">
+            </div>
+            <div class="flex justify-between w-[100px] mx-auto">
+              <label for="cosmeticsCheck">Cosmetics</label>
+              <input type="checkbox" name="type" id="cosmeticsCheck">
+            </div>
+            <div class="flex justify-between w-[100px] mx-auto">
+              <label for="brandsCheck">Brands</label>
+              <input type="checkbox" name="type" id="brandsCheck">
+            </div>
+          </fieldset>
+        </div>
+      </div>
+    </div>
+    <div class="flex items-center">
+      <label class="group inline-block h-full cursor-pointer py-5 w-[51px] text-center h-[65px] box-border" for="search">
+        <svg class="w-[30px] block m-auto transition-transform scale-100 button-g group-hover:scale-150 group-hover:transition-transform" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
+        </svg>
+      </label>
+      <input type="text" id="search" placeholder="Input item name">
     </div>
     <div>
       <div class="flex">
