--- a/src/templates/cart.html
+++ b/src/templates/cart.html
@@ -1,4 +1,3 @@
-<template>
   <section>
     <h2 class="font-HelveticaNeueCyr font-[550] text-[32px] leading-snug">Cart <span class="font-HelveticaNeueCyr text-[16px] text-gray-300"><span>4</span> items</span></h2>
   </section>
@@ -6,7 +5,7 @@
     <div class="w-[70%]">
       <div class="w-[95%] border-transparent cursor-pointer mb-4 font-HelveticaNeueCyr">
         <div class="flex items-center justify-between p-[20px]">
-          <img class="object-contain max-h-[100px]" src="./assets/images/Photo2.jpg" alt="">
+          <img class="object-contain max-h-[100px]" src="../assets/images/Photo2.jpg" alt="">
           <div>
             <h3 class="jont-HelveticaNeueCyr font-[550] text-[24px] leading-snug">Jacket dress</h3>
           </div>
@@ -30,7 +29,7 @@
       </div>
       <div class="w-[95%] border-transparent cursor-pointer mb-4 font-HelveticaNeueCyr">
         <div class="flex items-center justify-between p-[20px]">
-          <img class="object-contain max-h-[100px]" src="./assets/images/Photo2.jpg" alt="">
+          <img class="object-contain max-h-[100px]" src="../assets/images/Photo2.jpg" alt="">
           <div>
             <h3 class="jont-HelveticaNeueCyr font-[550] text-[24px] leading-snug">Jacket dress</h3>
           </div>
@@ -74,4 +73,3 @@
       <button class="text-center w-full text-[24px] border-2 border-black">Buy now</button>
     </div>
   </div>
-</template>
