feat: add check item article in API

--- a/src/templates/itemMain.hbs
+++ b/src/templates/itemMain.hbs
@@ -1,5 +1,5 @@
 <template>
-  <div class="w-[23%]">
+  <div href="/item/1581214" class="w-[23%]">
     <div class="relative">
       <img class="mb-4" src="{{image}}" alt="Photo1">
       <a class="absolute top-2 right-2 cursor-pointer">
