--- a/src/templates/catalog.html
+++ b/src/templates/catalog.html
@@ -26,70 +26,69 @@
   </section>
   <section class="max-w-[1200px] h-[65px] mx-auto my-0 box-border flex justify-between items-center mb-4 font-Arial text-[16px]">
     <div class="flex">
-      <div class="mr-6">
-        <div class="flex justify-between cursor-pointer">
-          <p>Color</p>
-          <span>
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-6">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5" />
-              </svg>
-            </span>
-        </div>
-        <div class="flex w-[85px] h-[33px] justify-between flex-wrap">
-          <span class="w-[10px] h-[10px] mr-[3px] rounded-full border border-black bg-black cursor-pointer"></span>
-          <span class="w-[10px] h-[10px] mr-[3px] rounded-full border border-black bg-white cursor-pointer"></span>
-          <span class="w-[10px] h-[10px] mr-[3px] rounded-full border border-gray-300 bg-gray-300 cursor-pointer"></span>
-          <span class="w-[10px] h-[10px] mr-[3px] rounded-full border border-[#F6DAC1] bg-[#F6DAC1] cursor-pointer"></span>
-          <span class="w-[10px] h-[10px] mr-[3px] rounded-full border border-[#FCDDEC] bg-[#FCDDEC] cursor-pointer"></span>
-          <span class="w-[10px] h-[10px] mr-[3px] rounded-full border border-[#2F80ED] bg-[#2F80ED] cursor-pointer"></span>
-          <span class="w-[10px] h-[10px] mr-[3px] rounded-full border border-[#EB5757] bg-[#EB5757] cursor-pointer"></span>
-          <span class="w-[10px] h-[10px] mr-[3px] rounded-full border border-[#F2C94C] bg-[#F2C94C] cursor-pointer"></span>
-          <span class="w-[10px] h-[10px] mr-[3px] rounded-full border border-[#F2994A] bg-[#F2994A] cursor-pointer"></span>
-          <span class="w-[10px] h-[10px] mr-[3px] rounded-full border border-[#219653] bg-[#219653] cursor-pointer"></span>
-          <span class="w-[10px] h-[10px] mr-[3px] rounded-full border border-[#9B51E0] bg-[#9B51E0] cursor-pointer"></span>
-          <span class="w-[10px] h-[10px] mr-[3px] rounded-full border border-[#56CCF2] bg-[#56CCF2] cursor-pointer"></span>
+      <div class="flex justify-between w-[120px] relative mr-8">
+        <p>Brands</p>
+        <span>
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5" />
+            </svg>
+        </span>
+        <div class="brandsScroll absolute w-[130px] max-h-[150px] border-2 border-black bg-white top-[25px] left-[0px] rounded-[5px] z-10 overflow-y-auto">
+          <fieldset>
+            <div class="flex justify-between w-[100px] mx-auto">
+              <label for="brandSaleCheck">Sale</label>
+              <input type="checkbox" name=type id="brandSaleCheck">
+            </div>
+            <div class="flex justify-between w-[100px] mx-auto">
+              <label for="brandSaleCheck">Sale</label>
+              <input type="checkbox" name=type id="brandSaleCheck">
+            </div>
+            <div class="flex justify-between w-[100px] mx-auto">
+              <label for="brandSaleCheck">Sale</label>
+              <input type="checkbox" name=type id="brandSaleCheck">
+            </div>
+            <div class="flex justify-between w-[100px] mx-auto">
+              <label for="brandSaleCheck">Sale</label>
+              <input type="checkbox" name=type id="brandSaleCheck">
+            </div>
+            <div class="flex justify-between w-[100px] mx-auto">
+              <label for="brandSaleCheck">Sale</label>
+              <input type="checkbox" name=type id="brandSaleCheck">
+            </div>
+            <div class="flex justify-between w-[100px] mx-auto">
+              <label for="brandSaleCheck">Sale</label>
+              <input type="checkbox" name=type id="brandSaleCheck">
+            </div>
+            <div class="flex justify-between w-[100px] mx-auto">
+              <label for="brandSaleCheck">Sale</label>
+              <input type="checkbox" name=type id="brandSaleCheck">
+            </div>
+            <div class="flex justify-between w-[100px] mx-auto">
+              <label for="brandSaleCheck">Sale</label>
+              <input type="checkbox" name=type id="brandSaleCheck">
+            </div>
+            <div class="flex justify-between w-[100px] mx-auto">
+              <label for="brandSaleCheck">Sale</label>
+              <input type="checkbox" name=type id="brandSaleCheck">
+            </div>
+            <div class="flex justify-between w-[100px] mx-auto">
+              <label for="brandSaleCheck">Sale</label>
+              <input type="checkbox" name=type id="brandSaleCheck">
+            </div><div class="flex justify-between w-[100px] mx-auto">
+            <label for="brandSaleCheck">Sale</label>
+            <input type="checkbox" name=type id="brandSaleCheck">
+          </div>
+          </fieldset>
         </div>
       </div>
-      <div class="mr-6">
-        <div class="flex justify-between cursor-pointer">
-          <p>Size</p>
-          <span>
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-6">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5" />
-              </svg>
-            </span>
-        </div>
-        <div>
-          <a class="cursor-pointer">XS</a>
-          <a class="cursor-pointer">S</a>
-          <a class="cursor-pointer">M</a>
-          <a class="cursor-pointer">L</a>
-          <a class="cursor-pointer">XL</a>
-        </div>
-      </div>
-      <div class="mr-4">
-        <div class="flex justify-between cursor-pointer">
-          <p>Length</p>
-          <span>
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-6">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5" />
-              </svg>
-          </span>
-        </div>
-        <div>
-          <a class="cursor-pointer">Mini</a>
-          <a class="cursor-pointer">Midi</a>
-          <a class="cursor-pointer">Maxi</a>
-        </div>
-      </div>
-      <div class="flex justify-between w-[120px] relative">
+      <div class="flex justify-between w-[120px] relative mr-8">
         <p>Types</p>
         <span>
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-6">
               <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5" />
             </svg>
         </span>
-        <div class="absolute w-[120px] border-2 border-black bg-white top-[25px] left-[0px] rounded-xl">
+        <div class="typesScroll absolute w-[130px] max-h-[150px] border-2 border-black bg-white top-[25px] left-[0px] rounded-[5px] z-10 overflow-y-auto">
           <fieldset>
             <div class="flex justify-between w-[100px] mx-auto">
               <label for="saleCheck">Sale</label>
@@ -124,6 +123,28 @@
               <input type="checkbox" name="type" id="brandsCheck">
             </div>
           </fieldset>
+        </div>
+      </div>
+      <div class="mr-5">
+        <p>Stock</p>
+        <div class="stockRangeContainer relative">
+          <input id='stockLeft' type='range' min='0' value='0' max='100' class="rangeStock absolute"/>
+          <input id='stockRight' type='range' min='0' value='100' max='100' class="rangeStock absolute"/>
+        </div>
+        <div class="flex justify-between">
+          <p>0</p>
+          <p>100</p>
+        </div>
+      </div>
+      <div>
+        <p>Price</p>
+        <div class="stockPriceContainer relative">
+          <input id='priceLeft' type='range' min='0' value='0' max='100' class="rangePrice absolute"/>
+          <input id='priceRight' type='range' min='0' value='100' max='100' class="rangePrice absolute"/>
+        </div>
+        <div class="flex justify-between">
+          <p>0</p>
+          <p>100</p>
         </div>
       </div>
     </div>
