feat: add quick buy button

--- a/src/templates/product_page.hbs
+++ b/src/templates/product_page.hbs
@@ -41,8 +41,11 @@
       <p class="mr-4 font-HelveticaNeueCyr font-normal text-[16px] leading-[1.1] mb-4">Last updated: {{updateAt}}</p>
     </div>
     <div class="flex justify-between items-center mb-[60px]">
-      <button type="button" class="w-full h-[53px] bg-black flex items-center justify-center text-white font-Arial font-normal text-[16px] leading-snug">
+      <button type="button" class="w-[48%] h-[53px] bg-black flex items-center justify-center text-white font-Arial font-normal text-[16px] leading-snug">
         Add to cart
+      </button>
+      <button type="button" class="w-[48%] h-[53px] bg-black flex items-center justify-center text-white font-Arial font-normal text-[16px] leading-snug">
+        Quick buy
       </button>
     </div>
     <div class="drop-menu h-[68px] overflow-hidden border-t-[1px] border-b-[1px] border-gray-300">
