--- a/src/templates/product_page.hbs
+++ b/src/templates/product_page.hbs
@@ -3,42 +3,41 @@
   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-3">
     <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3" />
   </svg>
-  <span class="mr-3">{{category}}</span>
+  <span class="mr-3">{{object.category}}</span>
   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-3">
     <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3" />
   </svg>
-  <span class="mr-3">{{brand}}</span>
+  <span class="mr-3">{{object.brand}}</span>
   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-3">
     <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3" />
   </svg>
-  <span class="mr-3 text-black">{{name}}</span>
+  <span class="mr-3 text-black">{{object.title}}</span>
 </div>
 <div class="max-w-[1200px] mx-auto my-0 box-border flex justify-between">
   <div class="w-[45%]">
-    <figure class="main-photo-container bg-center relative w-full h-max group" style="background-image: url('{{photo1}}')">
-      <img class='main-photo w-full mb-4 group-hover:opacity-0' src="{{photo1}}" alt="MainPhoto">
+    <figure class="main-photo-container bg-center relative w-full h-max group" style="background-image: url('{{imageFirst}}&fit=constrain')">
+      <img class='main-photo w-full mb-4 group-hover:opacity-0' src="{{imageFirst}}&fit=constrain" alt="MainPhoto">
     </figure>
     <div class="carousel-photo flex justify-between">
-      <img class="w-[18%] cursor-pointer" src="{{photo1}}" alt="Photo1">
-      <img class="w-[18%] cursor-pointer" src="{{photo2}}" alt="Photo1">
-      <img class="w-[18%] cursor-pointer" src="{{photo3}}" alt="Photo1">
-      <img class="w-[18%] cursor-pointer" src="{{photo4}}" alt="Photo1">
+      {{#each object.images}}
+      <img class="w-[18%] cursor-pointer" src="{{this}}&fit=constrain" alt="Photo1">
+      {{/each}}
     </div>
   </div>
   <div class="w-[45%]">
     <div class="flex items-center justify-between mb-[10px]">
-      <h2 class="font-HelveticaNeueCyr font-[550] text-[32px] leading-snug">{{name}}</h2>
-      <p class="font-HelveticaNeueCyr font-normal text-[16px] text-gray-300">Article: <span>{{article}}</span></p>
+      <h2 class="font-HelveticaNeueCyr font-[550] text-[32px] leading-snug">{{object.title}}</h2>
+      <p class="font-HelveticaNeueCyr font-normal text-[16px] text-gray-300">Article: <span>{{object.article}}</span></p>
     </div>
     <p class="font-HelveticaNeueCyr font-[550] text-[24px] leading-snug mb-[20px]">
-      <span>{{price}}</span>
+      <span>{{object.price}}</span>
       ₽
     </p>
     <div class="mb-4">
-      <p class="mr-4 font-HelveticaNeueCyr font-normal text-[16px] leading-[1.1] mb-4">Category: {{category}}</p>
-      <p class="mr-4 font-HelveticaNeueCyr font-normal text-[16px] leading-[1.1] mb-4">Brand: {{brand}}</p>
-      <p class="mr-4 font-HelveticaNeueCyr font-normal text-[16px] leading-[1.1] mb-4">Stock: {{stock}}</p>
-      <p class="mr-4 font-HelveticaNeueCyr font-normal text-[16px] leading-[1.1] mb-4">Last updated: {{updateAt}}</p>
+      <p class="mr-4 font-HelveticaNeueCyr font-normal text-[16px] leading-[1.1] mb-4">Category: {{object.category}}</p>
+      <p class="mr-4 font-HelveticaNeueCyr font-normal text-[16px] leading-[1.1] mb-4">Brand: {{object.brand}}</p>
+      <p class="mr-4 font-HelveticaNeueCyr font-normal text-[16px] leading-[1.1] mb-4">Stock: {{object.stock}}</p>
+      <p class="mr-4 font-HelveticaNeueCyr font-normal text-[16px] leading-[1.1] mb-4">Last updated: {{date}}</p>
     </div>
     <div class="flex justify-between items-center mb-[60px]">
       <button type="button" class="w-[48%] h-[53px] bg-black flex items-center justify-center text-white font-Arial font-normal text-[16px] leading-snug">
@@ -56,7 +55,7 @@
             <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
           </svg>
         </div>
-        <p>{{description}}</p>
+        <p>{{object.description}}</p>
       </div>
     </div>
   </div>
