feat: add select

--- a/src/templates/catalog.html
+++ b/src/templates/catalog.html
@@ -1,4 +1,4 @@
-<aside class="container text-sm">
+<aside class="container mx-auto text-sm flex">
   <!--  <div class="relative inline-block">-->
   <!--    <button class="border rounded hover:border-gray-700 px-2 py-1">Category-->
   <!--      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"-->
@@ -29,6 +29,15 @@
       <div id="slider"></div>
       <div></div>
     </div>
+  </div>
+  <div class="">
+    <select class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded focus:ring-gray-800 focus:border-gray-800 block w-full pl-2 pr-7 py-1">
+      <option selected>Sort option:</option>
+      <option value="US">Sort by price ↑</option>
+      <option value="CA">Sort by price ↓</option>
+      <option value="UgS">Sort by rating ↑</option>
+      <option value="CA5">Sort by rating ↓</option>
+    </select>
   </div>
 </aside>
 <section id="items"
