feat: replace filters to CatalogView.ts

--- a/src/templates/catalog.html
+++ b/src/templates/catalog.html
@@ -1,4 +1,4 @@
-<aside class="container mx-auto text-sm flex">
+<aside id="filters" class="container mx-auto text-sm flex">
   <!--  <div class="relative inline-block">-->
   <!--    <button class="border rounded hover:border-gray-700 px-2 py-1">Category-->
   <!--      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"-->
