feat: add sorting

--- a/src/templates/catalog.html
+++ b/src/templates/catalog.html
@@ -49,13 +49,13 @@
         </div>
       </div>
       <div class="inline-block">
-        <select
+        <select id="sort"
             class="border rounded hover:border-gray-700 focus:ring-gray-700 focus:border-gray-700 w-full pl-2 pr-7 py-1">
           <option selected>Sort option:</option>
-          <option value="US">Sort by price ↑</option>
-          <option value="CA">Sort by price ↓</option>
-          <option value="UgS">Sort by rating ↑</option>
-          <option value="CA5">Sort by rating ↓</option>
+          <option value="price:ASC">Sort by price ↑</option>
+          <option value="price:DESC">Sort by price ↓</option>
+          <option value="sold:ASC">Sort by purchase ↑</option>
+          <option value="sold:DESC">Sort by purchase ↓</option>
         </select>
       </div>
     </div>
