fix: fix layout for buttons

--- a/src/templates/itemMain.hbs
+++ b/src/templates/itemMain.hbs
@@ -9,6 +9,6 @@
   </div>
   <div class="flex justify-between mt-2.5 h-10 font-HelveticaNeueCyr text-black leading-5">
     <p class="">{{title}}</p>
-    <p class="font-bold">{{price}}<span>₽</span></p>
+    <p class="font-bold ml-2">{{price}}<span>₽</span></p>
   </div>
 </div>
