--- a/src/templates/catalog.html
+++ b/src/templates/catalog.html
@@ -1,7 +1,7 @@
 <aside id="filters" class="container mx-auto text-sm">
-    <div class="flex gap-1 mb-2 flex-wrap">
+    <div class="flex sm:flex-row flex-col gap-1 mb-2 flex-wrap relative">
       <div id="categoryFilter" class="relative inline-block">
-        <button class="border rounded hover:border-gray-700 px-2 py-1">Category
+        <button class="border rounded w-full sm:w-auto hover:border-gray-700 px-2 py-1">Category
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
               stroke="currentColor" class="inline w-3 h-[1.15rem] rotate-180">
             <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5"/>
@@ -14,7 +14,7 @@
         </div>
       </div>
       <div id="brandFilter" class="relative inline-block">
-        <button class="border rounded hover:border-gray-700 px-2 py-1">Brand
+        <button class="border w-full sm:w-auto rounded hover:border-gray-700 px-2 py-1">Brand
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
               stroke="currentColor" class="inline w-3 h-[1.15rem] rotate-180">
             <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5"/>
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div id="priceFilter" class="relative inline-block">
-        <button class="border rounded hover:border-gray-700 px-2 py-1">Price
+        <button class="border w-full sm:w-auto rounded hover:border-gray-700 px-2 py-1">Price
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
               stroke="currentColor" class="inline w-3 h-[1.15rem] rotate-180">
             <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5"/>
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div id="stockFilter" class="relative inline-block">
-        <button class="border rounded hover:border-gray-700 px-2 py-1">Stock
+        <button class="border w-full sm:w-auto rounded hover:border-gray-700 px-2 py-1">Stock
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
               stroke="currentColor" class="inline w-3 h-[1.15rem] rotate-180">
             <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5"/>
@@ -79,7 +79,7 @@
       </button>
     </div>
     <div class="inline-block self-center text-base">Found: <span id="total">100</span></div>
-    <div class="flex">
+    <div class="flex w-full sm:w-auto">
   <span class="inline-flex items-center px-2 border border-gray-300 rounded-l">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
             class="w-6 h-4">
@@ -88,7 +88,7 @@
       </svg>
   </span>
       <input type="text" id="search"
-          class="rounded-none rounded-r border focus:ring-gray-700 focus:border-gray-700 border-gray-300 px-2 py-1"
+          class="rounded-none flex-grow rounded-r border focus:ring-gray-700 focus:border-gray-700 border-gray-300 px-2 py-1"
           placeholder="Search">
     </div>
   </div>
