--- a/src/templates/catalog.html
+++ b/src/templates/catalog.html
@@ -1,154 +1,98 @@
-<!-- <section class="container mx-auto h-[65px] mx-auto my-0 box-border flex justify-between items-center mb-4 font-Arial text-[16px]">-->
-<!--    <div class="flex">-->
-<!--      <div class="flex justify-between w-[120px] relative mr-8">-->
-<!--        <p>Brands</p>-->
-<!--        <span>-->
-<!--            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-6">-->
-<!--              <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5" />-->
-<!--            </svg>-->
-<!--        </span>-->
-<!--        <div class="brandsScroll absolute w-[130px] max-h-[150px] border-2 border-black bg-white top-[25px] left-[0px] rounded-[5px] z-10 overflow-y-auto">-->
-<!--          <fieldset>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="brandSaleCheck">Sale</label>-->
-<!--              <input type="checkbox" name=type id="brandSaleCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="brandSaleCheck">Sale</label>-->
-<!--              <input type="checkbox" name=type id="brandSaleCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="brandSaleCheck">Sale</label>-->
-<!--              <input type="checkbox" name=type id="brandSaleCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="brandSaleCheck">Sale</label>-->
-<!--              <input type="checkbox" name=type id="brandSaleCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="brandSaleCheck">Sale</label>-->
-<!--              <input type="checkbox" name=type id="brandSaleCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="brandSaleCheck">Sale</label>-->
-<!--              <input type="checkbox" name=type id="brandSaleCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="brandSaleCheck">Sale</label>-->
-<!--              <input type="checkbox" name=type id="brandSaleCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="brandSaleCheck">Sale</label>-->
-<!--              <input type="checkbox" name=type id="brandSaleCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="brandSaleCheck">Sale</label>-->
-<!--              <input type="checkbox" name=type id="brandSaleCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="brandSaleCheck">Sale</label>-->
-<!--              <input type="checkbox" name=type id="brandSaleCheck">-->
-<!--            </div><div class="flex justify-between w-[100px] mx-auto">-->
-<!--            <label for="brandSaleCheck">Sale</label>-->
-<!--            <input type="checkbox" name=type id="brandSaleCheck">-->
-<!--          </div>-->
-<!--          </fieldset>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div class="flex justify-between w-[120px] relative mr-8">-->
-<!--        <p>Types</p>-->
-<!--        <span>-->
-<!--            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-6">-->
-<!--              <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5" />-->
-<!--            </svg>-->
-<!--        </span>-->
-<!--        <div class="typesScroll absolute w-[130px] max-h-[150px] border-2 border-black bg-white top-[25px] left-[0px] rounded-[5px] z-10 overflow-y-auto">-->
-<!--          <fieldset>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="saleCheck">Sale</label>-->
-<!--              <input type="checkbox" name=type id="saleCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="newCheck">New</label>-->
-<!--              <input type="checkbox" name="type" id="newCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="clothesCheck">Clothes</label>-->
-<!--              <input type="checkbox" name="type" id="clothesCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="shoesCheck">Shoes</label>-->
-<!--              <input type="checkbox" name="type" id="shoesCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="presentsCheck">Presents</label>-->
-<!--              <input type="checkbox" name="type" id="presentsCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="accessorsCheck">Accessors</label>-->
-<!--              <input type="checkbox" name="type" id="accessorsCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="cosmeticsCheck">Cosmetics</label>-->
-<!--              <input type="checkbox" name="type" id="cosmeticsCheck">-->
-<!--            </div>-->
-<!--            <div class="flex justify-between w-[100px] mx-auto">-->
-<!--              <label for="brandsCheck">Brands</label>-->
-<!--              <input type="checkbox" name="type" id="brandsCheck">-->
-<!--            </div>-->
-<!--          </fieldset>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div class="mr-5">-->
-<!--        <p>Stock</p>-->
-<!--        <div class="stockRangeContainer relative">-->
-<!--          <input id='stockLeft' type='range' min='0' value='0' max='100' class="rangeStock absolute"/>-->
-<!--          <input id='stockRight' type='range' min='0' value='100' max='100' class="rangeStock absolute"/>-->
-<!--        </div>-->
-<!--        <div class="flex justify-between">-->
-<!--          <p>0</p>-->
-<!--          <p>100</p>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div>-->
-<!--        <p>Price</p>-->
-<!--        <div class="stockPriceContainer relative">-->
-<!--          <input id='priceLeft' type='range' min='0' value='0' max='100' class="rangePrice absolute"/>-->
-<!--          <input id='priceRight' type='range' min='0' value='100' max='100' class="rangePrice absolute"/>-->
-<!--        </div>-->
-<!--        <div class="flex justify-between">-->
-<!--          <p>0</p>-->
-<!--          <p>100</p>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--    <div class="flex items-center">-->
-<!--      <label class="group inline-block h-full cursor-pointer py-5 w-[51px] text-center h-[65px] box-border" for="search">-->
-<!--        <svg class="w-[30px] block m-auto transition-transform scale-100 button-g group-hover:scale-150 group-hover:transition-transform" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">-->
-<!--          <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />-->
-<!--        </svg>-->
-<!--      </label>-->
-<!--      <input type="text" id="search" placeholder="Input item name">-->
-<!--    </div>-->
-<!--    <div>-->
-<!--      <div class="flex">-->
-<!--        <div class="flex justify-between cursor-pointer">-->
-<!--          <p>Sort by:&nbsp;</p>-->
-<!--        </div>-->
-<!--        <div class="flex flex-col justify-between text-[#7D7B7B]">-->
-<!--          <a class="flex justify-between cursor-pointer">-->
-<!--            <span>price increase&nbsp;</span>-->
-<!--            <span>-->
-<!--              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-6">-->
-<!--                <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5" />-->
-<!--              </svg>-->
-<!--            </span>-->
-<!--          </a>-->
-<!--          <a class="cursor-pointer">descending price</a>-->
-<!--          <a class="cursor-pointer">popularity</a>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </section>-->
-  <section id="items" class="container xl:grid-cols-4 mx-auto grid lg:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-5">
-  </section>
+<aside id="filters" class="container mx-auto text-sm">
+    <div class="flex sm:flex-row flex-col gap-1 mb-2 flex-wrap relative">
+      <div id="categoryFilter" class="relative inline-block">
+        <button class="border rounded w-full sm:w-auto hover:border-gray-700 px-2 py-1">Category
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="inline w-3 h-[1.15rem] rotate-180">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5"/>
+          </svg>
+        </button>
+        <div
+            class="dropdownMenu hidden drop-shadow-lg p-2 absolute w-max max-h-[200px] bg-white rounded-[5px] z-10 overflow-y-auto">
+          <fieldset>
+          </fieldset>
+        </div>
+      </div>
+      <div id="brandFilter" class="relative inline-block">
+        <button class="border w-full sm:w-auto rounded hover:border-gray-700 px-2 py-1">Brand
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="inline w-3 h-[1.15rem] rotate-180">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5"/>
+          </svg>
+        </button>
+        <div
+            class="dropdownMenu hidden drop-shadow-lg p-2 absolute w-max max-h-[200px] bg-white rounded-[5px] z-10 overflow-y-auto">
+        </div>
+      </div>
+      <div id="priceFilter" class="relative inline-block">
+        <button class="border w-full sm:w-auto rounded hover:border-gray-700 px-2 py-1">Price
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="inline w-3 h-[1.15rem] rotate-180">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5"/>
+          </svg>
+        </button>
+        <div
+            class="dropdownMenu hidden drop-shadow-lg p-2 absolute w-[300px] max-h-[200px] bg-white rounded-[5px] z-10">
+        </div>
+      </div>
+      <div id="stockFilter" class="relative inline-block">
+        <button class="border w-full sm:w-auto rounded hover:border-gray-700 px-2 py-1">Stock
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="inline w-3 h-[1.15rem] rotate-180">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5"/>
+          </svg>
+        </button>
+        <div
+            class="dropdownMenu hidden drop-shadow-lg p-2 absolute w-[300px] max-h-[200px] bg-white rounded-[5px] z-10">
+          <div id="slider"></div>
+          <div></div>
+        </div>
+      </div>
+      <div class="inline-block">
+        <select id="sort"
+            class="border rounded hover:border-gray-700 focus:ring-gray-700 focus:border-gray-700 w-full pl-2 pr-7 py-1">
+          <option selected>Sort option:</option>
+          <option value="price:ASC">Sort by price ↑</option>
+          <option value="price:DESC">Sort by price ↓</option>
+          <option value="sold:ASC">Sort by purchase ↑</option>
+          <option value="sold:DESC">Sort by purchase ↓</option>
+        </select>
+      </div>
+    </div>
+  <div class="flex gap-1 justify-between mb-2 flex-wrap-reverse ">
+    <div class="flex gap-1">
+      <button id="cleanBtn" title="Clean filters" class="border rounded hover:border-gray-700 p-1">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+            class="w-6 h-4">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"/>
+        </svg>
+      </button>
+      <button id="copyFiltersBtn" title="Copy filters" class="border rounded hover:border-gray-700 p-1">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+            class="w-6 h-4">
+          <path stroke-linecap="round" stroke-linejoin="round"
+              d="M15.75 17.25v3.375c0 .621-.504 1.125-1.125 1.125h-9.75a1.125 1.125 0 01-1.125-1.125V7.875c0-.621.504-1.125 1.125-1.125H6.75a9.06 9.06 0 011.5.124m7.5 10.376h3.375c.621 0 1.125-.504 1.125-1.125V11.25c0-4.46-3.243-8.161-7.5-8.876a9.06 9.06 0 00-1.5-.124H9.375c-.621 0-1.125.504-1.125 1.125v3.5m7.5 10.375H9.375a1.125 1.125 0 01-1.125-1.125v-9.25m12 6.625v-1.875a3.375 3.375 0 00-3.375-3.375h-1.5a1.125 1.125 0 01-1.125-1.125v-1.5a3.375 3.375 0 00-3.375-3.375H9.75"/>
+        </svg>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="green" class="hidden w-6 h-4">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" />
+        </svg>
+      </button>
+    </div>
+    <div class="inline-block self-center text-base">Found: <span id="total">100</span></div>
+    <div class="flex w-full sm:w-auto">
+  <span class="inline-flex items-center px-2 border border-gray-300 rounded-l">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+            class="w-6 h-4">
+        <path stroke-linecap="round" stroke-linejoin="round"
+            d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z"/>
+      </svg>
+  </span>
+      <input type="text" id="search"
+          class="rounded-none flex-grow rounded-r border focus:ring-gray-700 focus:border-gray-700 border-gray-300 px-2 py-1"
+          placeholder="Search">
+    </div>
+  </div>
+
+</aside>
+<section id="items"
+    class="container mx-auto grid xl:grid-cols-4 lg:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-5"></section>
