--- a/src/templates/product_page.hbs
+++ b/src/templates/product_page.hbs
@@ -1,4 +1,4 @@
-<div class="max-w-[1200px] mx-auto mb-[10px] text-left flex font-Arial font-normal font-[16px] text-gray-300">
+<div class="container mx-auto mb-[10px] text-left flex font-Arial font-normal font-[16px] text-gray-300">
   <span class="mr-3">Women</span>
   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-3">
     <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3" />
@@ -13,7 +13,7 @@
   </svg>
   <span class="mr-3 text-black">{{object.title}}</span>
 </div>
-<div class="max-w-[1200px] mx-auto my-0 box-border flex justify-between">
+<div class="container mx-auto my-0 box-border flex justify-between">
   <div class="w-[45%]">
     <figure class="main-photo-container bg-center relative w-full h-max group" style="background-image: url('{{imageFirst}}&fit=constrain')">
       <img class='main-photo w-full mb-4 group-hover:opacity-0' src="{{imageFirst}}&fit=constrain" alt="MainPhoto">
