--- a/src/templates/cart.hbs
+++ b/src/templates/cart.hbs
@@ -1,4 +1,4 @@
-<div class="max-w-[1200px] mx-auto">
+<div class="container mx-auto">
 <section class="flex justify-between font-HelveticaNeueCyr font-[550] text-[32px] leading-snug">
     <h2 class="">Cart <span class="font-HelveticaNeueCyr text-[16px] text-gray-300"><span class="countOfItems">{{countOfItems}}</span> items</span></h2>
     <div class="text-[16px]">
