--- a/src/templates/footer.hbs
+++ b/src/templates/footer.hbs
@@ -1,9 +1,9 @@
-<footer class="max-w-[1200px] w-full h-[100px] mx-auto my-0 box-border flex justify-between items-center font-HelveticaNeueCyr">
+<footer class="container mx-auto h-[100px] my-0 box-border flex justify-between items-center font-HelveticaNeueCyr">
   <a class="cursor-pointer h-[50px]" href="https://rs.school/js/">
     <img class="h-full" src="{{img}}" alt="rs school">
   </a>
   <p>{{year}}</p>
-  <div class="flex flex-wrap content-around h-[75px]">
+  <div class="flex flex-col gap-2">
     <a class="w-full hover:underline" href="https://github.com/KuniLee">
       KuniLee
     </a>
