feat: add listener for addtocart btn

--- a/src/templates/itemMain.hbs
+++ b/src/templates/itemMain.hbs
@@ -2,7 +2,7 @@
   <a class="flex-grow" href="item/{{article}}">
     <img class="object-cover {{#if big}}h-full{{/if}}" src="{{images.[0]}}&fit=constrain" alt="{{title}}">
   </a>
-  <div class="group-hover:animate-pulse invisible group-hover:visible absolute top-2 right-2 cursor-pointer">
+  <div class="toCartBtn group-hover:animate-pulse invisible group-hover:visible absolute top-2 right-2 cursor-pointer">
     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
       <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
     </svg>
