feat: add quick buy button

--- a/src/templates/product_page.hbs
+++ b/src/templates/product_page.hbs
@@ -43,7 +43,7 @@
       <button type="button" class="addToCartButton w-[48%] h-[53px] bg-black flex items-center justify-center text-white font-Arial font-normal text-[16px] leading-snug">
         Add to cart
       </button>
-      <button type="button" class="w-[48%] h-[53px] bg-black flex items-center justify-center text-white font-Arial font-normal text-[16px] leading-snug">
+      <button type="button" class="quickBuyButton w-[48%] h-[53px] bg-black flex items-center justify-center text-white font-Arial font-normal text-[16px] leading-snug">
         Quick buy
       </button>
     </div>
