feat: add delete promocode button

--- a/src/templates/cart.hbs
+++ b/src/templates/cart.hbs
@@ -52,7 +52,7 @@
         </div>
       {{/each}}
     </div>
-    <div class="w-[25%] font-HelveticaNeueCyr max-[900px]:w-[100%]">
+    <div class="cartOrderInformation w-[25%] font-HelveticaNeueCyr max-[900px]:w-[100%]">
       <h3 class="text-[32px] mb-[10px] max-[900px]:text-center">About order</h3>
       <div class="flex justify-between mb-[10px]">
         <input type="text" name="promocode" placeholder="Enter promocode" class="promocodeInput text-center border-2 rounded-xl border-black w-[70%]">
