--- a/src/templates/promocodeField.hbs
+++ b/src/templates/promocodeField.hbs
@@ -1,4 +1,12 @@
-<div class="promocodeBlock flex justify-between mb-[10px]" data-discount="{{discountData}}">
-  <p>Promo: <span class="promocodeName">{{promocodeName}}</span></p>
+<div class="promocodeBlock flex justify-between mb-[10px] new" data-discount="{{discountData}}" data-promocode="{{promocodeName}}">
+  <div class="flex">
+    <button class="discountDeleteButton cursor-pointer">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+      </svg>
+    </button>
+    <p>Promo: <span class="promocodeName">{{promocodeName}}</span>
+    </p>
+  </div>
   <p class="text-red-600">-<span class="cartDiscount">{{discount}}</span>₽</p>
 </div>
