fix: remove breadcrumbs from empty cart page

--- a/src/templates/empty_cart.html
+++ b/src/templates/empty_cart.html
@@ -1,7 +1,4 @@
-<div class="max-w-[1200px] mx-auto">
-  <section class="flex justify-between font-HelveticaNeueCyr font-[550] text-[32px] leading-snug">
-    <h2 class="">Cart</h2>
-  </section>
+<div class="container mx-auto">
   <div class="flex justify-center font-HelveticaNeueCyr font-[800] text-[40px]">
     <p>Cart is empty</p>
   </div>
