fix: update sumOfCart item in localStorage

--- a/src/templates/cart.hbs
+++ b/src/templates/cart.hbs
@@ -29,6 +29,10 @@
               <div class="w-[250px] max-[1023px]:w-full max-[1023px]:mb-[10px]">
                 <h3 class="jont-HelveticaNeueCyr cursor-pointer font-[550] text-[16px] leading-snug text-center max-[768px]:text-[15px]">{{this.title}}</h3>
               </div>
+              <div class="text-center">
+                <p>Category:</p>
+                <p>{{this.category}}</p>
+              </div>
               <div class="countContainer flex flex-col items-center w-[100px] max-[1023px]:flex-wrap max-[1023px]:w-unset max-[768px]:text-[13px]">
                 <div>
                   <p>In stock: <span class="inStockCount">{{this.stock}}</span></p>
