feat: add total count of products

--- a/src/templates/cart.hbs
+++ b/src/templates/cart.hbs
@@ -66,7 +66,7 @@
         <p>Try: RS, NEW10, REF15</p>
       </div>
       <div class="flex justify-between mb-[10px]">
-        <p class="">Items</p>
+        <p class="">Products: <span class="itemsCount">{{countOfItems}}</span></p>
         <p class=""><span class="totalPriceCart">{{totalPrice}}</span>₽</p>
       </div>
       <div class="totalDiscount flex justify-between mb-[10px]">
@@ -74,7 +74,7 @@
         <p class="text-red-600">-<span class="cartDiscount">0</span>₽</p>
       </div>
       <div class="flex justify-between mb-[10px]">
-        <p>Summary</p>
+        <p>Total</p>
         <p class="text-[32px]"><span class="priceCart">{{totalPrice}}</span>₽</p>
       </div>
       <button class="buyButton text-center w-full text-[24px] border-2 border-black hover:bg-black hover:text-white hover:transition">Buy now</button>
